--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         .top-container {
             display: flex;
             position: relative;
-            background-color: rgb(218, 218, 218);
+            background-color: rgb(222, 222, 222);
             width: 100%;
             height: 80px;
             justify-content: center;
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgba(7, 16, 68, 0.961);
+            background: rgba(7, 15, 64, 0.961);
             height: 60px;
             object-fit: cover;
             z-index: 1;
@@ -448,7 +448,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
-  width: 75px;
+  width: 100px;
   height: 55px;
   justify-content: center;
   align-items: center;
@@ -1053,7 +1053,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background-color: rgb(218, 218, 218);
+            background-color: rgb(222, 222, 222);
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1064,7 +1064,7 @@
             position: relative;
             width: 79.6%;
             height: 79px;
-            background-color: rgb(221, 221, 221);
+            background-color: rgba(222, 222, 222);
             justify-content: center;
             align-items: center;
             margin-left: 7%; 
@@ -1076,7 +1076,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(218, 218, 218, 0.791);
+            background-color: rgba(222, 222, 222, 0.791);
             justify-content: center;
             align-items: center;
         }
@@ -1386,8 +1386,8 @@
             position: relative;
             overflow: hidden;
             width: 750px;
-            height: 460px;
-            background: #d27941ee;
+            height: 440px;
+            background: #ed8647ee;
             color: #000;
         }
 
@@ -1429,7 +1429,7 @@
         .k1 img {
             width: 750px;
             height: 440px;
-            animation: auto 15s infinite ease-in;
+            animation: auto 15s infinite linear;
             animation-delay: 10s;
             position: absolute;
         }
@@ -1438,7 +1438,7 @@
             transform: scale(1.1);
         }
 
-        @keyframes auto1 {
+        @keyframes auto {
             0% {
                 left: 100%;
             }
@@ -2182,7 +2182,7 @@
             padding-top: 30px;
             justify-content: center;
             justify-items: center;
-            background: rgba(255, 102, 102, 0.439);
+            background: rgba(255, 102, 102, 0.35);
         }
 
         .NADA{
@@ -3546,20 +3546,19 @@ function showSlides(n) {
 
                         <a href="#">
                             <div class="k">
-                                <img src="https://zupimages.net/up/22/31/z42x.jpg"
-                                    alt="Celebrating Christmas in Africa">
+                                <img src="https://zupimages.net/up/22/31/z42x.jpg" alt=" Christmas at Tiki Yiki HDQ">
                             </div>
                         </a>
 
                         <a href="#">
                             <div class="k1">
-                                <img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Around Kids to teach them">
+                                <img src="https://www.zupimages.net/up/22/46/daw5.jpg" alt="Promoteur dispensant un cours de soutien">
                             </div>
                         </a>
 
                         <a href="#">
                             <div class="k2">
-                                <img src="https://www.zupimages.net/up/22/46/daw5.jpg" alt="Promoteur dispensant un cours de soutien">
+                                <img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Around Kids to teach them">
                             </div>
                         </a>
                     </div>
@@ -3567,7 +3566,7 @@ function showSlides(n) {
                     <div class="k3-container">
 
                         <div class="kk">
-                                <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming">
+                                <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="">
                                 <figure>
                                 <figcaption style="font-family: 'arial'; font-size: 13px; text-align: left;  color: rgba(81, 60, 177, 0.937);">
                                     Drumming and Courses at Tiki N'Yiki
@@ -4083,13 +4082,13 @@ function showSlides(n) {
 
             <a href="https://www.princeedwardisland.ca/en" target="_blank">
                 <div class="NADA">
-                Prince Edouard Island 
+                Prince Edward Island 
                 </div>
             </a>
 
             <a href="https://www.gov.nl.ca/" target="_blank">
                 <div class="NADA">
-                Newfoundland
+                Newfoundland & La.
                 </div>
             </a>
 
