--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
-  width: 100px;
+  width: 21s0px;
   height: 55px;
   justify-content: center;
   align-items: center;
@@ -476,7 +476,7 @@
         }
 
         .Contact:hover .Contact-content:hover a:hover{
-            width: 72px;
+            width: 100px;
             height: 50px;
             text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
@@ -2182,7 +2182,7 @@
             padding-top: 30px;
             justify-content: center;
             justify-items: center;
-            background: rgba(99, 122, 255, 0.339);
+            background: rgba(100, 131, 254, 0.286);
         }
 
         .NADA{
@@ -2192,7 +2192,7 @@
             width: 190px;
             height: 77px;
             border-radius: 0.5rem;
-            border: 0.12rem solid rgba(20, 25, 88, 0.902);
+            border: 0.12rem solid rgba(25, 29, 107, 0.906);
             box-shadow: 2px 1px 0.5rem 2px rgba(20, 26, 111, 0.751);
             justify-content: center;
             justify-items: center;
@@ -2206,7 +2206,7 @@
         .NADA:hover{
             background:-webkit-linear-gradient(rgba(255, 35, 35, 0.822), rgba(255, 166, 166, 0.391));
             cursor: pointer;
-            box-shadow: 0 3px 0.8rem 5px rgba(10, 14, 59, 0.913);
+            box-shadow: 0 4px 0.85rem 5px rgba(10, 14, 59, 0.913);
             color: #000;
             transition: 0.15s linear;
             font-size: 17.5px;
