--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
             position: relative;
             flex-direction: column;
             width: 100%;
-            height: auto;
+            height: 6105px;
             background-color: rgba(222, 222, 222, 0.791);
             justify-content: center;
             align-items: center;
