--- a/index.html
+++ b/index.html
@@ -1310,7 +1310,7 @@
             background-color: #fdfdfde5;
             padding-top: 20px;
             padding-bottom: 20px;
-            margin-top: 6%;
+            margin-top: 9%;
         }
 
         .Home-Photo {
@@ -1375,9 +1375,9 @@
             justify-content: left;
             align-items: center;
             background: transparent;
-            font-family: 'Barlow Condensed', sans-serif;
-            font-size: 13px;
-            color: rgba(37, 37, 37, 0.865);
+            font-family: arial;
+            font-size: 10px;
+            color: rgb(6, 118, 255);
             margin-top: 4px;
             text-align: center;
         }
