--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
-  width: 21s0px;
+  width: 210px;
   height: 55px;
   justify-content: center;
   align-items: center;
@@ -2192,7 +2192,7 @@
             width: 190px;
             height: 77px;
             border-radius: 0.5rem;
-            border: 0.12rem solid rgba(25, 29, 107, 0.906);
+            border: 0.12rem solid rgba(28, 32, 115, 0.906);
             box-shadow: 2px 1px 0.5rem 2px rgba(20, 26, 111, 0.751);
             justify-content: center;
             justify-items: center;
@@ -2200,13 +2200,13 @@
             padding-bottom: 20px;
             font-family: georgia;
             font-size: 17px;
-            color:rgb(43, 48, 120);
+            color:rgb(48, 54, 134);
         }
 
         .NADA:hover{
-            background:-webkit-linear-gradient(rgba(255, 35, 35, 0.822), rgba(255, 166, 166, 0.391));
+            background:-webkit-linear-gradient(rgba(249, 45, 22, 0.906), rgba(255, 166, 166, 0.391));
             cursor: pointer;
-            box-shadow: 0 4px 0.85rem 5px rgba(10, 14, 59, 0.913);
+            box-shadow: 0 4px 0.85rem 5px rgba(9, 13, 52, 0.944);
             color: #000;
             transition: 0.15s linear;
             font-size: 17.5px;
@@ -4106,7 +4106,7 @@ function showSlides(n) {
 
             <a href="https://gov.nu.ca/" target="_blank">
                 <div class="NADA">
-                    Nunavit
+                    Nunavut
                 </div>
             </a>
 
@@ -4124,7 +4124,7 @@ function showSlides(n) {
 
                     <a href="https://www.thecanadianencyclopedia.ca/en/article/arctic-ocean-and-canada" target="_blank">
                         <div class="NADA">
-                            Artic Ocean
+                            Arctic Ocean
                         </div>
                         </a>
 
