--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         .navbar:hover .Photography:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            border-bottom: 0.25rem solid yellow;
             color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
@@ -201,7 +201,7 @@
         .navbar:hover .Sport:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            border-bottom: 0.25rem solid yellow;
             color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
@@ -278,7 +278,7 @@
         .navbar:hover .Education:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            border-bottom: 0.25rem solid yellow;
             color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
@@ -357,7 +357,7 @@
         .navbar:hover .Videos:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            border-bottom: 0.25rem solid yellow;
             color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
@@ -434,7 +434,7 @@
         .navbar:hover .Contact:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            border-bottom: 0.25rem solid yellow;
             color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
@@ -512,7 +512,7 @@
         .navbar:hover .Community:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            border-bottom: 0.25rem solid yellow;
             color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
@@ -531,7 +531,7 @@
   z-index: 1;
   box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   border-top: 0.1rem solid rgb(5, 5, 85);
-   }
+   } 
 
         .Community-content a {
             font-size: 17px;
@@ -589,7 +589,7 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            border-bottom: 0.25rem solid yellow;
             color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
@@ -668,7 +668,7 @@
         .navbar:hover .Disability:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            border-bottom: 0.25rem solid yellow;
             color: rgb(0, 153, 255);
             transition: 0.25s ease;
             cursor: pointer;
@@ -2182,7 +2182,7 @@
             padding-top: 30px;
             justify-content: center;
             justify-items: center;
-            background: rgba(100, 131, 254, 0.286);
+            background: rgba(100, 133, 254, 0.286);
         }
 
         .NADA{
@@ -2193,20 +2193,20 @@
             height: 77px;
             border-radius: 0.5rem;
             border: 0.12rem solid rgba(28, 32, 115, 0.906);
-            box-shadow: 2px 1px 0.5rem 2px rgba(20, 26, 111, 0.751);
+            box-shadow: 2px 1px 0.45rem 2px rgba(20, 26, 111, 0.751);
             justify-content: center;
             justify-items: center;
             padding-top: 20px; 
             padding-bottom: 20px;
             font-family: georgia;
             font-size: 17px;
-            color:rgb(48, 54, 134);
+            color:rgb(41, 46, 121);
         }
 
         .NADA:hover{
-            background:-webkit-linear-gradient(rgba(252, 85, 66, 0.906), rgba(255, 166, 166, 0.391));
+            background:-webkit-linear-gradient(rgba(255, 88, 70, 0.906), rgba(255, 166, 166, 0.391));
             cursor: pointer;
-            box-shadow: 0 4px 0.85rem 5px rgba(9, 13, 52, 0.944);
+            box-shadow: 0 6px 0.85rem 6px rgba(6, 11, 45, 0.924);
             color: #000;
             transition: 0.15s linear;
             font-size: 17.5px;
