--- a/index.html
+++ b/index.html
@@ -323,7 +323,6 @@
             width: auto;
             height: 50px;
             text-align: center;
-            text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
@@ -2122,8 +2121,9 @@
         }
 
         .content8:hover{
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
-            transition: 0.25s linear;}
+            box-shadow: 0px -1px 0.4rem 0.5px rgba(200, 200, 200, 0.675);
+            transition: 0.25s linear;
+        background: #fff;}
 
         .envelop {
             display: grid;
@@ -2182,7 +2182,7 @@
             padding-top: 30px;
             justify-content: center;
             justify-items: center;
-            background: rgba(100, 133, 254, 0.286);
+            background: rgba(104, 144, 254, 0.286);
         }
 
         .NADA{
@@ -2192,7 +2192,7 @@
             width: 190px;
             height: 77px;
             border-radius: 0.5rem;
-            border: 0.12rem solid rgba(28, 32, 115, 0.906);
+            border: 0.12rem solid rgba(33, 38, 137, 0.906);
             box-shadow: 2px 1px 0.45rem 2px rgba(20, 26, 111, 0.751);
             justify-content: center;
             justify-items: center;
@@ -2200,7 +2200,7 @@
             padding-bottom: 20px;
             font-family: georgia;
             font-size: 17px;
-            color:rgb(41, 46, 121);
+            color:rgb(43, 49, 127);
         }
 
         .NADA:hover{
@@ -2434,10 +2434,10 @@
         }
 
         .content9:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0px -1px 0.4rem 0.5px rgba(200, 200, 200, 0.675);
             transition: 0.25s linear;
             padding: 5px;
-            background-color: #f9f8f8;
+            background-color: #ffffff;
         }
 
         .contenty {
@@ -3851,7 +3851,7 @@ function showSlides(n) {
 
                     <a href="https://medium.com/patsy-colegate/we-are-the-sum-of-experiences-that-we-encounter-as-we-go-through-life-2c54c8ac550" target="_blank">
                 <div class="contentx1">
-                    <b>What You're Living And Doing Stand As Your Own Experiences</b>
+                    <b>What You are Living And Doing Stands As Your Own Experiences</b>
                 </div>
             </a>
 
