--- a/index.html
+++ b/index.html
@@ -2172,7 +2172,7 @@
 
         .CANADA{
             display: grid;
-            grid-template-rows: 1fr 2fr;
+            grid-template-rows: 1fr 1.5fr;
             row-gap: 1.2rem; 
             width: 84%;
             height: 409px;
@@ -2183,7 +2183,7 @@
         }
 
 .DACA{
-    background: #f1f1f1f1;
+    background: #f1f1f18a;
     display: grid;
     justify-content: center;
     justify-items: center;
@@ -2193,8 +2193,10 @@
     width: 100%;
     height: auto;
     padding: 16px;
-    border: 0.12px solid rgba(181, 191, 200, 0.87);
-    box-shadow: -1px 2px 0.5rem 1px rgba(20, 61, 103, 0.829);
+    border: 0.12px solid rgba(26, 79, 135, 0.829);
+    border-left: 0.35rem solid rgba(102, 111, 119, 0.969);
+    border-right: 0.35rem solid rgba(102, 111, 119, 0.969);
+    box-shadow: -1px 2px 0.45rem 1px rgba(16, 49, 84, 0.829);
 }
 
 .DACA:hover{
