--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
             flex-direction: column;
             width: 100%;
             height: 6200px;
-            background-color: rgba(222, 222, 222, 0.791);
+            background-color: rgba(226, 226, 226, 0.791);
             justify-content: center;
             align-items: center;
         }
@@ -2193,18 +2193,18 @@
     width: 100%;
     height: auto;
     padding: 16px;
-    border: 0.12px solid rgba(26, 79, 135, 0.829);
-    border-left: 0.35rem solid rgba(102, 111, 119, 0.969);
-    border-right: 0.35rem solid rgba(102, 111, 119, 0.969);
-    box-shadow: -1px 2px 0.45rem 1px rgba(16, 49, 84, 0.829);
+    border: 0.13rem solid rgba(81, 126, 163, 0.969);
+    border-left: 0.35rem solid rgba(86, 134, 173, 0.969);
+    border-right: 0.35rem solid rgba(86, 134, 173, 0.969);
+    box-shadow: -1px 2px 0.5rem 1px rgba(31, 105, 180, 0.906);
 }
 
 .DACA:hover{
     background: #fff;
-    box-shadow: 0 2px 0.9rem 3px rgba(23, 76, 130, 0.829);
+    box-shadow: 0 2px 1rem 3px rgba(15, 67, 119, 0.829);
     transition: 0.2s linear;
-    color:rgb(8, 48, 88);
-    border: 0.12px solid rgba(181, 191, 200, 0.87);
+    color:rgb(12, 56, 99);
+    border: 0.13rem solid rgba(73, 127, 175, 0.969);
 }
 
         .DANACA{
