--- a/index.html
+++ b/index.html
@@ -2218,7 +2218,7 @@
             padding: 20px;
             justify-content: center;
             justify-items: center;
-            background: rgba(104, 144, 254, 0.286);
+            background: -webkit-linear-gradient(rgba(169, 191, 253, 0.363),rgba(213, 224, 253, 0.43));
         }
         .NADA{
             background: #fff;
