--- a/index.html
+++ b/index.html
@@ -2014,7 +2014,7 @@
             row-gap: 5px;
             justify-content: center;
             justify-items: center;
-            background-color: #ffffffec;
+            background-color: #ffffff;
             width: 84%;
             height: 250px;
             font-family: 'georgia';
@@ -2104,7 +2104,7 @@
             column-gap: 2px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfde5;
+            background-color: #ffffff;
             width: 84%;
             height: 630px;
             font-family: 'georgia';
