--- a/index.html
+++ b/index.html
@@ -1977,7 +1977,7 @@
             grid-template-columns: 1fr;
             width: 560px;
             column-gap: 5px;
-            justify-content: right;
+            justify-content: center;
             justify-items: center;
             background: transparent;
             height: 260px;
@@ -2024,6 +2024,7 @@
             text-align: left;
             word-spacing: 1.7px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            padding: 10px;
         }
 
         .contentx a:hover {
@@ -2033,7 +2034,7 @@
 
         .contentx0{
             display: grid;
-            grid-template-columns: auto;
+            grid-template-columns: 1fr;
             column-gap: 25px;
             justify-content: center;
             justify-items: center;
@@ -2045,11 +2046,12 @@
         }
 
         .contentx1 {
-            display: flex;
-            position: relative;
+            display: grid;
+            grid-template-columns: 1fr;
+            column-gap: 25px;
             justify-content: center;
-            align-items: center;
-            flex-direction: column;
+            justify-items: center;
+            border-radius: 1rem;
             width: 105.5%;
             height: 95px;
             background-color: rgba(255, 255, 255, 0.947);
