--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
             position: relative;
             flex-direction: column;
             width: 100%;
-            height: 6200px;
+            height: 6190px;
             background-color: rgb(226, 226, 226);
             justify-content: center;
             align-items: center;
@@ -2039,10 +2039,10 @@
             justify-content: center;
             justify-items: center;
             border-radius: 1rem;
-            width: 920px;
-            height: 215px;
+            width: auto;
+            height: 220px;
             background: transparent;
-            padding: 30px;
+            padding: 20px;
         }
 
         .contentx1 {
@@ -2052,9 +2052,9 @@
             justify-content: center;
             justify-items: center;
             border-radius: 1rem;
-            width: 105.5%;
+            width: auto;
             height: 95px;
-            background-color: rgba(255, 255, 255, 0.947);
+            background-color: transparent;
             font-family: 'arial black';
             font-size: 24px;
             word-spacing: 1.9px;
@@ -2074,21 +2074,22 @@
         }
 
         .contentx2 {
+            display: grid;
+            grid-template-columns: 1fr;
+            column-gap: 25px;
             justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            display: flex;
-            position: relative;
-            width: 105.5%;
+            justify-items: center;
+            border-radius: 1rem;
+            width: auto;
             height: 95px;
-            background-color: rgba(255, 255, 255, 0.947);
+            background-color: transparent;
             font-family: 'arial black';
-            font-size: 23px;
-            word-spacing: 1.5px;
+            font-size: 24px;
+            word-spacing: 1.9px;
             color: rgba(103, 103, 103, 0.751);
             border-radius: 1rem;
-            border: 0.1px solid rgba(202, 202, 202, 0.254) !important;
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
+            border: 0.1px solid rgba(202, 202, 202, 0.254)!important;
+            box-shadow: 0px 2px 8.8px 2.2px rgba(75, 75, 75, 0.582);
             cursor: pointer;
             padding: 10px;
         }
