--- a/index.html
+++ b/index.html
@@ -3211,8 +3211,8 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            background-color: #fffffff9;
-            color: rgba(9, 106, 197, 0.949);
+            background-color: #ffffff;
+            color: crimson;
             padding: 7px;
             flex-direction: column;
             justify-content: center;
@@ -3220,21 +3220,21 @@ background: #717171;
             text-align: center;
             width: 84%;
             padding: 5px;
-            height: 40px;
+            height: 45px;
             font-family: 'Merienda';
             font-size: 16px;
-            border: 0.5px solid rgba(206, 206, 206, 0.161)c;
-            box-shadow: 0 2px 3px 1px rgba(152, 152, 152, 0.565);
-            border-radius: 0.1rem;
+            border: 0.5px solid rgba(221, 221, 221, 0.161);
+            box-shadow: 0px 5px 0.5rem 1px rgba(9, 106, 197, 0.851);
+            border-radius: 0.25rem;
             margin-top: 10px;
         }
 
         .reader:hover{
             background: #fff;
-            border: 0.1px solid rgba(97, 97, 97, 0.486);
+            border: 0.1px solid rgba(121, 121, 121, 0.486);
             border-bottom: none;
-            color: crimson;
-            box-shadow: 0px 5px 0.5rem 1px rgba(118, 118, 118, 0.565);
+            color: rgba(9, 106, 197, 0.949);
+            box-shadow: 0px 5px 0.5rem 1px rgba(9, 106, 197, 0.851);
             transition: 0.45s ease;
         }
         
@@ -3926,7 +3926,7 @@ function showSlides(n) {
                                 <h3>Welcome in Burkina Faso</h3>
                             </div>
                             <div class="content2y2">
-                                <p style="font-family: 'arial'; line-height: 16px; font-size: 12.5px; text-align: justify; color: rgb(0, 45, 227);">
+                                <p style="font-family: 'arial'; line-height: 16px; font-size: 12.5px; text-align: justify; color: rgb(53, 77, 176);">
                                     Burkina Faso is a landlocked country located in the heart of West Africa. Its capital and
                                     main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                                     agriculture, livestock breeding, mining, market gardening. The informal
