--- a/index.html
+++ b/index.html
@@ -441,17 +441,17 @@
         }
 
         .Contact-content {
+  color:#fff;
   display: none;
   position: absolute;
   background: #f3f3f3;
   padding: 1px;
-  z-index: 1;
-  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
-  width: 210px;
+  width: 75px;
   height: 55px;
   justify-content: center;
   align-items: center;
   z-index: 1;
+  box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
   border-top: 0.1rem solid rgb(5, 5, 85);
    }
 
@@ -475,7 +475,7 @@
         }
 
         .Contact:hover .Contact-content:hover a:hover{
-            width: 100px;
+            width: 107px;
             height: 50px;
             text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
@@ -489,7 +489,7 @@
             grid-template-columns: 1fr;
             justify-content: space-between;
             justify-items: center;
-            width: auto;
+            width: 110px;
         }
 
         .Community {
