--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
         }
 
         .Contact:hover .Contact-content:hover a:hover{
-            width: 107px;
+            width: 121px;
             height: 50px;
             text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
@@ -487,9 +487,9 @@
         .Contact:hover .Contact-content {
             display: grid;
             grid-template-columns: 1fr;
-            justify-content: space-between;
+            justify-content: center;
             justify-items: center;
-            width: 110px;
+            width: 125px;
         }
 
         .Community {
