--- a/index.html
+++ b/index.html
@@ -2162,6 +2162,7 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
+            text-align: center;
             width: 270px;
             height: 95px;
             background-color: rgb(255, 12, 12);
@@ -2441,7 +2442,7 @@
             color: rgb(82, 82, 82);
             font-size: 20px;
             line-height: 30px;
-            text-align: left;
+            text-align: center;
             word-spacing: 1.7px;
             padding-left: 5px;
             padding-bottom: 5px;
