--- a/index.html
+++ b/index.html
@@ -2556,6 +2556,7 @@
             justify-items: center;
             border-radius: 4px;
             text-align: left;
+            color: rgb(33, 89, 161);
         }
 
         .content2y {
@@ -2577,13 +2578,16 @@
             line-height: 10px;
             background-color: transparent;
             text-align: left;
+            padding: 5px;
+            box-shadow: 0px -0.5px 0.45rem 0.5px rgb(0, 110, 255);
         }
 
         .content2y2:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0px -1px 0.45rem 0.5px rgb(0, 78, 181);
             transition: 0.15s linear;
             padding: 5px;
             line-height: 10px;
+            color: #000;
         }
         .contenty3 {
             display: grid;
@@ -3188,8 +3192,8 @@ background: #717171;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: #fff!important;
-            color: rgb(5, 5, 85);
+            background: rgb(7, 152, 7)!important;
+            color: yellow;
             width: 155px;
             height: 30px;
             font-family: 'Barlow Condensed', sans-serif;
@@ -3201,8 +3205,8 @@ background: #717171;
         }
 
         .datime:hover {
-            background: rgb(7, 152, 7)!important;
-            color: yellow;
+            background: rgb(17, 41, 120)!important;
+            color: #fff;
             font-size: 15px;
             border: 0.1px solid #fff;
             transition: 0.28s linear;
@@ -3927,8 +3931,8 @@ function showSlides(n) {
                                 <h3>Welcome in Burkina Faso</h3>
                             </div>
                             <div class="content2y2">
-                                <p style="font-family: 'arial'; line-height: 16px; font-size: 12.5px; text-align: justify; color: rgb(53, 77, 176);">
-                                    Burkina Faso is a landlocked country located in the heart of West Africa. Its capital and
+                                <p style="font-family: 'Merienda'; line-height: 14px; font-size: 12.5px; text-align: justify;">
+                                    Burkina Faso is a landlocked country localised in the heart of West Africa. Its capital and
                                     main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                                     agriculture, livestock breeding, mining, market gardening. The informal
                                     sector is believed to create many jobs for people. Citizens are called Burkinabè.
@@ -4322,9 +4326,9 @@ function showSlides(n) {
                             in my motel room my finances have been hit. Thereby I've had to look for a cheap
                             room to live. But how to do it as a newcomer in one of the coldest countries around the world during winter time? Something was sure, I
                             couldn't afford to sleep outside.
-                            Then I went to downtown Montreal in a shelter in order to get my situation fixed. I spent half and a year to have my hearing. 
-                            Fortunately I have been granted and I applied for the permanent residency.
-                            So I wanted to share informations and experiences with anyone who is in need.<a href="#">Learn more... </a>
+                            Then I went in a shelter in downtown Montreal. I spent half and a year there. 
+                            Fortunately I have been granted ayslum and I applied for the permanent residency.
+                            So I wanted to share some informations with anyone who will be in need.<a href="#">Learn more... </a>
                         </div>
 
                     </div>
