--- a/index.html
+++ b/index.html
@@ -3792,7 +3792,7 @@ function showSlides(n) {
                                 Have To Struggle Two Times Harder At Least Than Anyone To Get Their Needs And Achieve.
                                 They are experiencing Toxic Environments Favored By A Lot Of Stigmatisations.</b> </p>
                                 <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;">As a disabled person, I experienced
-                            and still experiencing discriminations. It's too tough and challenging but It's Teaching . I
+                            and still experiencing lots <b>discriminations</b> everywhere. It's too tough, heartbreaking and challenging but It's also learning . I
                             have to find out a way to get my rights respected
                             as human-being.</p>
                     </div>
@@ -3813,7 +3813,7 @@ function showSlides(n) {
 
             <div class="content7">
 
-                <a href="file:///C:/Users/User/Documents/saxiwam.html" target="_blank">
+                <a href="https://en.wikipedia.org/wiki/FESTIMA" target="_blank">
                     <div class="k-imagek7">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
@@ -3821,8 +3821,8 @@ function showSlides(n) {
                                 Promote And Preserve Cultural Identity From Elders [Grand-Parents and Parents] To Kids or
                                 To Grand-Sons. Everyone Is Playing A Key Role Of Transmission In Order To
                                 Strongly Preserve It</b> </p>
-                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;">Promoting Saxiwama as a cultural
-                            practice is a best way to transmit and preserve it.</p>
+                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;"> <b>FESTIMA</b> is a festival of masks that happens every year in Dedougou, a city of Burkina Faso. It features how mask has deeply anchored in the traditions and culture of the area and in Sub-African countries.
+                            </p>
                     </div>
                 </a>
 
