--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
             position: relative;
             flex-direction: column;
             width: 100%;
-            height: 6194px;
+            height: auto;
             background-color: rgb(226, 226, 226);
             justify-content: center;
             align-items: center;
@@ -2497,6 +2497,46 @@
             border-bottom: 0.2px solid #9d9d9d7c;
         }
 
+        .BURKINAFASO{
+          display: grid;
+          grid-template-columns: repeat(7,0.9fr);
+          grid-template-rows: repeat(5,0.6fr);
+          justify-content: space-between;
+          justify-items: center;
+          grid-gap: 1rem;
+          width: 84%;
+          height: auto;
+          padding: 20px;
+          background: rgba(173, 191, 173, 0.169);
+
+        }
+
+.FASO{
+display: grid;
+grid-template-columns: 1fr;
+justify-content: center;
+justify-items: center;
+background: #f1f1f1;
+font-family: georgia;
+font-size: 15px;
+box-shadow: 2px 3px 0.6rem 1px rgba(17, 17, 88, 0.796);
+border: 1px solid rgba(33, 33, 171, 0.796);
+border-radius: 0.5rem;
+width: 146px;
+height: 65px;
+padding: 12px;
+color: rgb(180, 48, 0);
+cursor: pointer;
+        }
+        .FASO:hover{
+            background: #000;
+            color: #fff;
+            border: 1px solid #fff;
+            border-radius: 0.5rem;
+            transition: 0.29s linear;
+            box-shadow: 2px 3px 0.8rem 2px rgba(17, 17, 88, 0.796);
+        }
+       
         .contentyy {
             display: grid;
             grid-template-rows: 2fr 1fr;
@@ -3907,6 +3947,55 @@ function showSlides(n) {
             </div>
 
             </div>
+ <div class="BURKINAFASO">
+
+    <div class="FASO"> 1. Ballé</div>
+    <div class="FASO"> 2. Bam</div>
+    <div class="FASO"> 3. Banwa</div>
+    <div class="FASO"> 4. Bazèga</div>
+    <div class="FASO"> 5. Bouguiriba</div>
+    <div class="FASO"> 6. Boulgou</div>
+    <div class="FASO"> 7. Boulkiemde</div>
+    <div class="FASO"> 8. Comoe</div>
+    <div class="FASO"> 9. Ganzourgou</div>
+    <div class="FASO"> 10. Gnagna</div>
+    <div class="FASO"> 11. Gourma</div>
+    <div class="FASO"> 12. Houet</div>
+    <div class="FASO"> 13. Ioba</div>
+    <div class="FASO"> 14. Kadiogo</div>
+    <div class="FASO"> 15. Kénédougou</div>
+    <div class="FASO"> 16. Komandjari</div>
+    <div class="FASO"> 17. Kompienga</div>
+    <div class="FASO"> 18. Kossi</div>
+    <div class="FASO"> 19. Koulpelogo</div>
+    <div class="FASO"> 20. Kouritenga</div>
+    <div class="FASO"> 21. Kourweogo</div>
+    <div class="FASO"> 22. Leraba</div>
+    <div class="FASO"> 23. Loroum</div>
+    <div class="FASO"> 24. Mouhoun</div>
+    <div class="FASO"> 25. Nahouri</div>
+    <div class="FASO"> 26. Namentenga</div>
+    <div class="FASO"> 27. Nayala</div>
+    <div class="FASO"> 28. Noumbiel</div>
+    <div class="FASO"> 29. Oubritenga</div>
+    <div class="FASO"> 30. Oudalan</div>
+    <div class="FASO"> 31. Passore</div>
+    <div class="FASO"> 32. Poni</div>
+    <div class="FASO"> 33. Sanguié</div>
+    <div class="FASO"> 34. Sanmentenga</div>
+    <div class="FASO"> 35. Seno</div>
+    <div class="FASO"> 36. Sissili </div>
+    <div class="FASO"> 37. Soum</div>
+    <div class="FASO"> 38. Sourou</div>
+    <div class="FASO"> 39. Tapoa</div>
+    <div class="FASO"> 40. Tuy</div>
+    <div class="FASO"> 41. Yagha</div>
+    <div class="FASO"> 42. Yatenga</div>
+    <div class="FASO"> 43. Ziro</div>
+    <div class="FASO"> 44. Zondoma </div>
+    <div class="FASO"> 45. Zoundweogo</div>
+
+</div>
 
             <div class="contenty">
 
