--- a/index.html
+++ b/index.html
@@ -2524,7 +2524,7 @@ border: 1px solid rgba(33, 33, 171, 0.796);
 border-radius: 0.5rem;
 width: 146px;
 height: 65px;
-padding: 12px;
+padding-top: 20px;
 color: rgb(180, 48, 0);
 cursor: pointer;
         }
