--- a/index.html
+++ b/index.html
@@ -2503,7 +2503,7 @@
           grid-template-rows: repeat(5,0.6fr);
           justify-content: space-between;
           justify-items: center;
-          grid-gap: 1rem;
+          grid-gap: 0.5rem;
           width: 84%;
           height: auto;
           padding: 20px;
@@ -2522,9 +2522,9 @@ font-size: 15px;
 box-shadow: 2px 3px 0.6rem 1px rgba(17, 17, 88, 0.796);
 border: 1px solid rgba(33, 33, 171, 0.796);
 border-radius: 0.5rem;
-width: 140px;
+width: 138px;
 height: 65px;
-padding-top: 20px;
+padding: 10px;
 color: rgb(180, 48, 0);
 cursor: pointer;
         }
