--- a/index.html
+++ b/index.html
@@ -2498,13 +2498,38 @@
         }
 
         .BURKINAFASO{
+            display: grid;
+            grid-template-rows: 0.5fr 1fr;
+            column-gap: 2rem;
+            justify-content: center;
+            justify-items: center;
+            width: 84%;
+            height: 680px;
+            padding: 10px;
+            background: transparent;
+            font-family: georgia;
+            font-size: 18px;
+            color: rgb(42, 40, 42);
+
+        }
+        .FASOTITLE{
+            display: grid;
+            grid-template-columns: 1fr;
+            column-gap: 1rem;
+            justify-content: center;
+            justify-items: center;
+            width: 100%;
+            height: 100px;
+        }
+
+        .BUFASO{
           display: grid;
           grid-template-columns: repeat(7,0.9fr);
           grid-template-rows: repeat(5,0.6fr);
-          justify-content: space-between;
+          justify-content: center;
           justify-items: center;
           grid-gap: 0.5rem;
-          width: 84%;
+          width: 100%;
           height: auto;
           padding: 20px;
           background: rgba(173, 191, 173, 0.169);
@@ -3947,7 +3972,17 @@ function showSlides(n) {
             </div>
 
             </div>
- <div class="BURKINAFASO">
+
+            <div class="BURKINAFASO">
+
+            <div class="FASOTITLE">Burkina Faso, the land of integrity, is a landlocked country of 45 provinces, nested in the heart of West Africa. Its capital and
+                main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
+                agriculture, livestock breeding, mining, market gardening. The informal
+                sector is believed to create many jobs for people. Citizens are called Burkinabè.
+                                
+            </div>
+
+ <div class="BUFASO">
 
     <div class="FASO"> 1. Ballé</div>
     <div class="FASO"> 2. Bam</div>
@@ -3994,6 +4029,8 @@ function showSlides(n) {
     <div class="FASO"> 43. Ziro</div>
     <div class="FASO"> 44. Zondoma </div>
     <div class="FASO"> 45. Zoundweogo</div>
+
+</div>
 
 </div>
 
