--- a/index.html
+++ b/index.html
@@ -2515,11 +2515,14 @@
         .FASOTITLE{
             display: grid;
             grid-template-columns: 1fr;
-            column-gap: 1rem;
             justify-content: center;
             justify-items: center;
             width: 100%;
             height: 100px;
+            padding: 10px;
+            background: #f8f8f8;
+            border-radius: 0.35rem;
+            box-shadow: 1px 2px 0.5rem 1px rgb(17, 45, 148);
         }
 
         .BUFASO{
@@ -2532,7 +2535,7 @@
           width: 100%;
           height: auto;
           padding: 20px;
-          background: rgba(173, 191, 173, 0.169);
+          background: transparent;
 
         }
 
@@ -2541,7 +2544,7 @@ display: grid;
 grid-template-columns: 1fr;
 justify-content: center;
 justify-items: center;
-background: #f1f1f1;
+background: #fff;
 font-family: georgia;
 font-size: 15px;
 box-shadow: 2px 3px 0.6rem 1px rgba(17, 17, 88, 0.796);
