--- a/index.html
+++ b/index.html
@@ -2522,7 +2522,14 @@
             padding: 10px;
             background: #f8f8f8;
             border-radius: 0.35rem;
-            box-shadow: 1px 2px 0.5rem 1px rgb(17, 45, 148);
+            box-shadow: -0.5px 1px 0.25rem 0px rgb(19, 50, 162);
+            color:#000;
+        }
+
+        .FASOTITLE:hover{
+            color:rgb(1, 92, 212);
+            box-shadow: -0.5px 3px 0.5rem 2px rgb(15, 40, 130);
+            transition: 0.2s linear;
         }
 
         .BUFASO{
@@ -3978,12 +3985,14 @@ function showSlides(n) {
 
             <div class="BURKINAFASO">
 
-            <div class="FASOTITLE">Burkina Faso, the land of integrity, is a landlocked country of 45 provinces, nested in the heart of West Africa. Its capital and
+            <a href="#">
+                <div class="FASOTITLE">
+                Burkina Faso, the land of integrity, is a landlocked country of 45 provinces, nested in the heart of West Africa. Its capital and
                 main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                 agriculture, livestock breeding, mining, market gardening. The informal
-                sector is believed to create many jobs for people. Citizens are called Burkinabè.
-                                
+                sector is believed to create many jobs for people. Citizens are called Burkinabè.              
             </div>
+        </a>
 
  <div class="BUFASO">
 
