--- a/index.html
+++ b/index.html
@@ -2504,11 +2504,11 @@
             justify-content: center;
             justify-items: center;
             width: 84%;
-            height: 680px;
-            padding: 10px;
+            height: 660px;
+            padding: 5px;
             background: transparent;
-            font-family: georgia;
-            font-size: 18px;
+            font-family: 'Merienda';
+            font-size: 15.5px;
             color: rgb(42, 40, 42);
 
         }
@@ -2518,8 +2518,8 @@
             justify-content: center;
             justify-items: center;
             width: 100%;
-            height: 100px;
-            padding: 10px;
+            height: 105px;
+            padding: 7px;
             background: #f8f8f8;
             border-radius: 0.35rem;
             box-shadow: -0.5px 1px 0.25rem 0px rgb(19, 50, 162);
@@ -3985,7 +3985,7 @@ function showSlides(n) {
 
             <div class="BURKINAFASO">
 
-            <a href="#">
+            <a href="https://www.gouvernement.gov.bf/accueil" target="_blank">
                 <div class="FASOTITLE">
                 Burkina Faso, the land of integrity, is a landlocked country of 45 provinces, nested in the heart of West Africa. Its capital and
                 main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
