--- a/index.html
+++ b/index.html
@@ -2063,7 +2063,7 @@
             border: 0.1px solid rgba(202, 202, 202, 0.254)!important;
             box-shadow: 0px 2px 8.8px 2.2px rgba(75, 75, 75, 0.582);
             cursor: pointer;
-            padding: 10px;
+            padding: 30px;
         }
 
         .contentx1:hover {
@@ -2091,7 +2091,7 @@
             border: 0.1px solid rgba(202, 202, 202, 0.254)!important;
             box-shadow: 0px 2px 8.8px 2.2px rgba(75, 75, 75, 0.582);
             cursor: pointer;
-            padding: 10px;
+            padding: 30px;
         }
 
         .contentx2:hover {
@@ -2504,12 +2504,13 @@
             justify-content: center;
             justify-items: center;
             width: 84%;
-            height: 660px;
-            padding: 5px;
+            height: 655px;
+            padding: 10px;
             background: transparent;
             font-family: 'Merienda';
             font-size: 15.5px;
             color: rgb(42, 40, 42);
+            border: 0.13rem solid #cecece;
 
         }
         .FASOTITLE{
@@ -2527,7 +2528,7 @@
         }
 
         .FASOTITLE:hover{
-            color:rgb(1, 92, 212);
+            color:rgb(0, 71, 164);
             box-shadow: -0.5px 3px 0.5rem 2px rgb(15, 40, 130);
             transition: 0.2s linear;
         }
@@ -3968,12 +3969,14 @@ function showSlides(n) {
                 <div class="contentx0">
 
                     <a href="https://medium.com/patsy-colegate/we-are-the-sum-of-experiences-that-we-encounter-as-we-go-through-life-2c54c8ac550" target="_blank">
-                <div class="contentx1">
+               
+                        <div class="contentx1">
                     <b>What You are Living And Doing Stands As Your Own Experiences</b>
                 </div>
             </a>
 
             <a href="https://venturefizz.com/stories/boston/4-ways-accountability-plays-role-success-or-failure" target="_blank">
+                
                 <div class="contentx2">
                     <b>The Way Of Your Success Or Failure Is Mostly Framed By Yourself</b>
                 </div>
