--- a/index.html
+++ b/index.html
@@ -2518,7 +2518,7 @@
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            width: 100%;
+            width: auto;
             height: 105px;
             padding: 7px;
             background: #f8f8f8;
@@ -2555,17 +2555,17 @@ justify-items: center;
 background: #fff;
 font-family: georgia;
 font-size: 15px;
-box-shadow: 2px 3px 0.6rem 1px rgba(17, 17, 88, 0.796);
+box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
 border: 1px solid rgba(33, 33, 171, 0.796);
 border-radius: 0.5rem;
-width: 138px;
+width: 150px;
 height: 65px;
-padding: 10px;
-color: rgb(180, 48, 0);
+padding: 15px;
+color: rgb(40, 40, 137);
 cursor: pointer;
         }
         .FASO:hover{
-            background: #000;
+            background: #0a0a0a;
             color: #fff;
             border: 1px solid #fff;
             border-radius: 0.5rem;
