--- a/index.html
+++ b/index.html
@@ -2648,18 +2648,19 @@ cursor: pointer;
 
         .content2y2 {
             width: 265px;
-            height: 180px;
+            height: 177px;
             padding-left: 1px;
             font-size: 10px;
             line-height: 10px;
             background-color: transparent;
             text-align: left;
             padding: 5px;
-            box-shadow: 0px -0.5px 0.45rem 0.5px rgb(0, 110, 255);
+            box-shadow: 0 0.4px 0.35rem 0.5px rgb(1, 107, 247);
+            border-radius: 0.4rem;
         }
 
         .content2y2:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgb(0, 78, 181);
+            box-shadow: 0 0.4px 0.5rem 0.5px rgb(0, 95, 220);
             transition: 0.15s linear;
             padding: 5px;
             line-height: 10px;
@@ -3056,7 +3057,7 @@ cursor: pointer;
             justify-content: center;
             text-align: center;
             width: 315px;
-            height: 560px;
+            height: 525px;
             background: transparent;
             font-size: 15.4px;
             font-family: 'verdana';
@@ -3064,6 +3065,9 @@ cursor: pointer;
             line-height: 19.75px;
             padding: 7px;
             color: #000;
+            border: 0.12rem solid #0353e7;
+            border-radius: 0.5rem;
+            box-shadow: 0 4px 0.5rem 2px rgb(1, 107, 247);
         }
 
         .in-sidebar a:hover {
@@ -3113,15 +3117,18 @@ cursor: pointer;
             justify-items: center;
             column-gap: 5px;
             width: 325px;
-            height: 505px;
-            padding: 3px;
+            height: 525px;
+            padding: 10px;
             font-family: 'Barlow Condensed', sans-serif;
             color: #222222e7;
             font-size: 18px;
             text-align: justify;
             line-height: 19.5px;
             background: transparent;
-            margin-top: 12px;
+            margin-top: -5px;
+            border: 0.12rem solid #0353e7;
+            border-radius: 0.5rem;
+            box-shadow: 0 4px 0.5rem 2px rgb(1, 107, 247);
         }
 
         .content11 {
@@ -4072,7 +4079,7 @@ function showSlides(n) {
                                 <h3>Welcome in Burkina Faso</h3>
                             </div>
                             <div class="content2y2">
-                                <p style="font-family: 'Merienda'; line-height: 14px; font-size: 12.5px; text-align: justify;">
+                                <p style="font-family: 'Merienda'; line-height: 14px; font-size: 12px; text-align: justify;">
                                     Burkina Faso is a landlocked country localised in the heart of West Africa. Its capital and
                                     main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                                     agriculture, livestock breeding, mining, market gardening. The informal
@@ -4460,16 +4467,16 @@ function showSlides(n) {
                         </div>
                         <div class="explanation2">
                             As a physical disabled person who legally made it to Canada, I experienced many challenges on my way. First
-                            of all, seeking asylum is a long and difficult process. It matters with longer administrative procedures
-                            that can end at least after 5 to 6 years before getting the citizenship if there is a grant. It's been so hard because
-                            as a disabled person in a new country I have to embrace a new culture and get adapted.
+                            of all, seeking asylum is a long and difficult process. It matters with administrative longer procedures
+                            that can last at least after 5 to 6 years before having the citizenship if there is a grant. It's been so hard because
+                            as a disabled person in a new country I have to embrace a new culture in addition to mine and then get adapted.
                             I had neither parents, nor relatives in Quebec-Canada at this time and I have to find out a way to stay. After spending 3 days
                             in my motel room my finances have been hit. Thereby I've had to look for a cheap
                             room to live. But how to do it as a newcomer in one of the coldest countries around the world during winter time? Something was sure, I
                             couldn't afford to sleep outside.
-                            Then I went in a shelter in downtown Montreal. I spent half and a year there. 
-                            Fortunately I have been granted ayslum and I applied for the permanent residency.
-                            So I wanted to share some informations with anyone who will be in need.<a href="#">Learn more... </a>
+                            Then I went to OBM shelter in downtown Montreal. There I spent a half year and then I moved to "La Maison du Père" to wait for ny hearing. 
+                            Fortunately I have been granted and applied for the permanent residency.
+                            That's why I want to share some experiences with anyone who will be in need.<a href="#">Learn more... </a>
                         </div>
 
                     </div>
